# AI-Econometrics-Copilot

./: .env.example  .gitignore  Makefile  README.md  README.zh-CN.md  docker-compose.yml
.github/workflows/: build-windows-desktop.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  ai-econometrics-backend.spec  requirements.txt
backend/app/: __main__.py  main.py
backend/tests/: conftest.py  test_analyses_api.py  test_column_typing.py  test_comparison.py  test_data_profiler.py  test_desktop_mode.py  test_discovery.py  test_index_listings.py  test_model_execution.py  test_onboarding.py  test_planning.py  test_projects.py  test_publication_exports.py  test_quick_analyze.py  test_reports.py  test_structure_detector.py  test_upload_api.py  (+1 more)
desktop/: README.md
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs  main.rs  menu.rs  sidecar.rs
docs/: api.md  architecture.md  deployment.md  deployment.zh-CN.md  development_plan.md  econometric_rules.md  quick-analyze.md  quick-analyze.zh-CN.md  quickstart.md  quickstart.zh-CN.md  troubleshooting.md  troubleshooting.zh-CN.md  user-guide.md  user-guide.zh-CN.md  windows-installation.md  windows-installation.zh-CN.md  windows-verification.md  windows-verification.zh-CN.md
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
installer_downloader/: README.md  downloader.ps1
sample_data/: world_bank_panel_sample.xlsx
scripts/: generate_sample_data.py  reset-local-data.ps1  reset-local-data.sh  start-local.ps1  start-local.sh  stop-local.ps1  stop-local.sh
(+170 files in other folders)
